cmake_minimum_required(VERSION 3.4)
project( camera )
FIND_PACKAGE(Boost COMPONENTS program_options system filesystem REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( camera_controls camera_controls.cpp )
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")
TARGET_LINK_LIBRARIES(camera_controls ${Boost_LIBRARIES})
target_link_libraries( camera_controls ${OpenCV_LIBS} )
